tests/errors/lexical_error_3.fm
PASTA_RAIZ "C:\Users\Documentos" 
REGRA SE $NOME É "documento.txt" ENTAO EXCLUIR // Operador É em vez de EH
